[package]
name = "roku-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_request_parser = "0.2.0"
local-ip-address = "0.5.1"
roxmltree = "0.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
